--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,7 +19,7 @@
     "opacity": "Opacity",
     "fontSize": "Font Size",
     "fontFamily": "Font Family",
-    "textAlign": "Text Align",
+    "textAlign": "Text align",
     "onlySelected": "Only selected",
     "withBackground": "With Background",
     "handDrawn": "Hand-Drawn",
