--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -147,7 +147,7 @@
     "blog": "Read our blog",
     "howto": "Follow our guides",
     "github": "Found an issue? Submit",
-    "textNewLine": "Enter new line in text",
+    "textNewLine": "Add new line (text)",
     "textFinish": "Finish editing text"
   }
 }
