--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -148,6 +148,6 @@
     "howto": "Follow our guides",
     "github": "Found an issue? Submit",
     "textNewLine": "Add new line (text)",
-    "textFinish": "Finish editing text"
+    "textFinish": "Finish editing (text/multi-line)"
   }
 }
