Add optional watermark on export

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,6 +23,7 @@
     "fontFamily": "Font family",
     "onlySelected": "Only selected",
     "withBackground": "With Background",
+    "addWatermark": "Add watermark (help spread the word!)",
     "handDrawn": "Hand-drawn",
     "normal": "Normal",
     "code": "Code",
