--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -150,6 +150,7 @@
     "howto": "Follow our guides",
     "github": "Found an issue? Submit",
     "textNewLine": "Add new line (text)",
-    "textFinish": "Finish editing (text)"
+    "textFinish": "Finish editing (text)",
+    "zoomCenter": "Zoom out to display all elements"
   }
 }
