feat: add Zen mode for distraction free drawing

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -77,7 +77,8 @@
     "redo": "Redo",
     "roomDialog": "Start live collaboration",
     "createNewRoom": "Create new room",
-    "toggleFullScreen": "Toggle full screen"
+    "toggleFullScreen": "Toggle full screen",
+    "toggleZenMode": "Toggle zen mode"
   },
   "alerts": {
     "clearReset": "This will clear the whole canvas. Are you sure?",
