--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -151,7 +151,7 @@
     "github": "Found an issue? Submit",
     "textNewLine": "Add new line (text)",
     "textFinish": "Finish editing (text)",
-    "zoomCenter": "Zoom to fit all elements"
+    "zoomToFit": "Zoom to fit all elements"
   },
   "encrypted": {
     "tooltip": "Your drawings are end-to-end encrypted so Excalidraw's servers will never see them.\nClick the icon to learn more..."
