Rename watermark things

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,7 +23,7 @@
     "fontFamily": "Font family",
     "onlySelected": "Only selected",
     "withBackground": "With Background",
-    "addWatermark": "Add watermark",
+    "addWatermark": "Add \"Made with Excalidraw\"",
     "handDrawn": "Hand-drawn",
     "normal": "Normal",
     "code": "Code",
@@ -54,7 +54,7 @@
     "duplicateSelection": "Duplicate",
     "untitled": "Untitled",
     "name": "Name",
-    "madeInExcalidraw": "Made in Excalidraw"
+    "madeWithExcalidraw": "Made with Excalidraw"
   },
   "buttons": {
     "clearReset": "Reset the canvas",
