--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -109,7 +109,7 @@
   "hints": {
     "linearElement": "Click to start multiple points, drag for single line",
     "linearElementMulti": "Click on last point or press Escape or Enter to finish",
-    "resize": "You can constrain proportions by holding SHIFT while resizing",
+    "resize": "Constrain proportions by holding SHIFT while resizing, maintain object ratio by holding ALT while resizing",
     "rotate": "You can constrain angles by holding SHIFT while rotating"
   },
   "errorSplash": {
