--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -78,7 +78,8 @@
     "roomDialog": "Start live collaboration",
     "createNewRoom": "Create new room",
     "toggleFullScreen": "Toggle full screen",
-    "toggleZenMode": "Toggle zen mode"
+    "toggleZenMode": "Toggle zen mode",
+    "exitZenMode": "Exit zen mode"
   },
   "alerts": {
     "clearReset": "This will clear the whole canvas. Are you sure?",
